--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "1412305-client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-redux",
+  "version": "1.0.0",
+  "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --open"
+  },
   "dependencies": {
     "axios": "^0.17.1",
-    "css-loader": "^0.28.7",
-    "isarray": "^2.0.2",
-    "material-ui": "^0.20.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "history": "^4.6.3",
+    "jwt-decode": "^2.2.0",
+    "qs": "^6.5.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
+    "webpack": "^3.10.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:3001"
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "html-webpack-plugin": "^2.26.0",
+    "path": "^0.12.7",
+    "webpack-dev-server": "^2.8.2"
+  }
 }
